moved Deck stuff to module (unstable)

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<script src="app.js"></script>
-
+<head>
+    <script type="module" >import * as app from './app.js'; window.Hit = Hit()</script>
+</head>
 <body>
-     
+     <button onclick="Hit()">Click</button>
 </body>
