--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
-<body>
-    <button onclick="window.Hit()">Click</button>
-</body>
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Blackjack made in Javascript">
+        <title>Blackjack JS</title>
+    </head>
+    <body>
+        <button onclick="window.Hit()">Hit</button>
+        <button onclick="window.Stand()">Stand</button>
+    </body>
+</html>
 <script type="module" >
-    import {Hit as imp} from './app.js';
+    import * as app from './app.js';
 
     window.Hit = function Hit(){
-        imp();
+        app.Hit();
+    }
+    window.Stand = function Stand(){
+        app.Stand();
     }
 </script>
