completed ace & win check also started on frontend

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
         <title>Blackjack JS</title>
     </head>
     <body>
+        <div id="dealerCards"></div>
         <button onclick="window.Hit()">Hit</button>
         <button onclick="window.Stand()">Stand</button>
+        <div id="playerCards"></div>
     </body>
 </html>
 <script type="module" >
